# pkg/openapi/router.go
@@ -140,6 +140,9 @@ type ServerInterface interface {
 	// Update network
 	// (PUT /api/v2/networks/{networkID})
 	PutApiV2NetworksNetworkID(w http.ResponseWriter, r *http.Request, networkID NetworkIDParameter)
+
+	// (GET /api/v2/regions/{regionID}/images)
+	GetApiV2RegionsRegionIDImages(w http.ResponseWriter, r *http.Request, regionID RegionIDParameter, params GetApiV2RegionsRegionIDImagesParams)
 	// List security groups
 	// (GET /api/v2/securitygroups)
 	GetApiV2Securitygroups(w http.ResponseWriter, r *http.Request, params GetApiV2SecuritygroupsParams)
@@ -420,6 +423,11 @@ func (_ Unimplemented) GetApiV2NetworksNetworkID(w http.ResponseWriter, r *http.
 // Update network
 // (PUT /api/v2/networks/{networkID})
 func (_ Unimplemented) PutApiV2NetworksNetworkID(w http.ResponseWriter, r *http.Request, networkID NetworkIDParameter) {
+	w.WriteHeader(http.StatusNotImplemented)
+}
+
+// (GET /api/v2/regions/{regionID}/images)
+func (_ Unimplemented) GetApiV2RegionsRegionIDImages(w http.ResponseWriter, r *http.Request, regionID RegionIDParameter, params GetApiV2RegionsRegionIDImagesParams) {
 	w.WriteHeader(http.StatusNotImplemented)
 }
 
@@ -2434,6 +2442,48 @@ func (siw *ServerInterfaceWrapper) PutApiV2NetworksNetworkID(w http.ResponseWrit
 	handler.ServeHTTP(w, r)
 }
 
+// GetApiV2RegionsRegionIDImages operation middleware
+func (siw *ServerInterfaceWrapper) GetApiV2RegionsRegionIDImages(w http.ResponseWriter, r *http.Request) {
+
+	var err error
+
+	// ------------- Path parameter "regionID" -------------
+	var regionID RegionIDParameter
+
+	err = runtime.BindStyledParameterWithOptions("simple", "regionID", chi.URLParam(r, "regionID"), &regionID, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
+	if err != nil {
+		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "regionID", Err: err})
+		return
+	}
+
+	ctx := r.Context()
+
+	ctx = context.WithValue(ctx, Oauth2AuthenticationScopes, []string{})
+
+	r = r.WithContext(ctx)
+
+	// Parameter object where we will unmarshal all parameters from the context
+	var params GetApiV2RegionsRegionIDImagesParams
+
+	// ------------- Optional query parameter "organizationID" -------------
+
+	err = runtime.BindQueryParameter("form", true, false, "organizationID", r.URL.Query(), &params.OrganizationID)
+	if err != nil {
+		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "organizationID", Err: err})
+		return
+	}
+
+	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		siw.Handler.GetApiV2RegionsRegionIDImages(w, r, regionID, params)
+	}))
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		handler = middleware(handler)
+	}
+
+	handler.ServeHTTP(w, r)
+}
+
 // GetApiV2Securitygroups operation middleware
 func (siw *ServerInterfaceWrapper) GetApiV2Securitygroups(w http.ResponseWriter, r *http.Request) {
 
@@ -3287,6 +3337,9 @@ func HandlerWithOptions(si ServerInterface, options ChiServerOptions) http.Handl
 	})
 	r.Group(func(r chi.Router) {
 		r.Put(options.BaseURL+"/api/v2/networks/{networkID}", wrapper.PutApiV2NetworksNetworkID)
+	})
+	r.Group(func(r chi.Router) {
+		r.Get(options.BaseURL+"/api/v2/regions/{regionID}/images", wrapper.GetApiV2RegionsRegionIDImages)
 	})
 	r.Group(func(r chi.Router) {
 		r.Get(options.BaseURL+"/api/v2/securitygroups", wrapper.GetApiV2Securitygroups)
